<resources>
    <string name="app_name">Cactus Snack</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Phone</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SEND</string>
    <string name="action_sign_in_short">Log In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="app_slogans">Drive it easily!</string>
    <string name="error_invalid_number">The must have 9 digits</string>


    <string name="title_activity_main">Home</string>
    <string name="title_activity_command">New Command</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="total_label">Total :</string>
    <string name="commands_label">Commande</string>
    <string name="products_label">Produits</string>
    <string name="logout_label">Deconnecté</string>
    <string name="about_label">A propos</string>
</resources>
