<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".uis.LoginActivity">
    <!-- Login progress -->
    <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content"
            android:layout_marginBottom="90dp"
            android:visibility="gone"/>

    <ScrollView

            android:layout_width="match_parent"
            android:fillViewport="true"
            android:layout_height="match_parent">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >
            <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:orientation="vertical">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"

                >
                    <ImageView
                            android:id="@+id/app_image"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/los"
                    />

                    <TextView
                            android:id="@+id/app_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name"
                            android:layout_below="@id/app_image"
                            android:textSize="30sp"
                            android:textColor="@color/colorPrimary"
                            android:layout_centerHorizontal="true"
                    />

                    <TextView
                            android:id="@+id/app_slogan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textSize="22sp"
                            android:text="@string/app_slogans"
                            android:textColor="@color/colorAccent"
                            android:layout_below="@id/app_name"
                            android:layout_centerHorizontal="true"
                    />
                </RelativeLayout
                >
                <LinearLayout
                        android:id="@+id/login_form"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/margin_large_extra"
                        android:orientation="vertical"
                >
                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <AutoCompleteTextView
                                android:id="@+id/number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_email"
                                android:inputType="number"
                                android:maxLines="1"
                                android:singleLine="true"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <EditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_password"
                                android:imeActionId="@+id/login"
                                android:imeActionLabel="@string/action_sign_in_short"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true"/>

                    </android.support.design.widget.TextInputLayout>

                    <Button
                            android:id="@+id/email_sign_in_button"
                            style="?android:textAppearanceSmall"
                            android:background="@drawable/background_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/action_sign_in"
                            android:textColor="@android:color/white"/>
                </LinearLayout
                >

            </LinearLayout>

        </RelativeLayout>


    </ScrollView>
</RelativeLayout>
